Abstracting loop, fixing header alignment, removing $light

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -308,7 +308,8 @@ header {
   width: 100%;
   max-width: 50rem;
   margin: 0 auto 0;
-  background-color: #fff; }
+  background-color: #fff;
+  position: relative; }
   header a img {
     margin: 1rem 0 1rem 1rem;
     display: inline-block;
@@ -445,7 +446,7 @@ div.gfyitem {
     position: relative !important; }
 
 .site-intro h1 {
-  font-family: "Merriweather Light", "Merriweather", "Baskerville", "Palatino Linotype", Georgia, serif;
+  font-family: "Merriweather", "Baskerville", "Palatino Linotype", Georgia, serif;
   font-style: italic;
   text-align: center;
   font-size: 2.6em;
@@ -455,13 +456,12 @@ div.gfyitem {
   margin-bottom: 1.5em; }
 
 .post-meta {
-  padding-left: 1.5rem;
   text-transform: uppercase;
   font-style: italic;
   font-size: 0.8rem;
-  color: #bbb; }
+  color: #979baf; }
   .post-meta time {
-    color: #777; }
+    color: #b4b7c5; }
   .post-meta a {
     font-size: 0.8rem; }
     .post-meta a:first-child {
@@ -523,10 +523,6 @@ img.featured, img.big-image {
     img.featured, img.big-image {
       width: 80%;
       margin-left: 20%; } }
-
-.unknown {
-  font-family: "Merriweather", "Baskerville", "Palatino Linotype", Georgia, serif;
-  font-size: 2rem; }
 
 h1, h2, h3, h4, h5, ul, li, p, img, .tile {
   max-width: 50rem;
@@ -684,25 +680,13 @@ nav.pagination {
         transition: transform 5s ease-in-out; } }
 
 @media screen and (min-width: 40em) {
-  /*header,h1,h2,h3,h4,h5,h6,p,pre code,ul,ol,.post-meta,.tile-wrapper,aside,figure,#disqus_thread{
-  	width: 85%;
-  	margin-left: 5%;
-  }*/
   header h1 {
     font-size: 2rem; } }
 @media screen and (min-width: 80em) {
-  /*header,h1,h2,h3,h4,h5,h6,p,pre code,ul,ol,.post-meta,.tile-wrapper,figure,#disqus_thread{
-  	margin-left: 20%;
-  	width:70%;
-  }*/
   ul ul, ol ol, ul ol, ol ul {
     margin-left: 2.5rem; }
 
-  /*pre code{
-  	margin-right: 10%;
-  	width:70%;
-  }*/
-  main {
+  main, body > header {
     left: 5em; }
 
   aside {
@@ -712,29 +696,7 @@ nav.pagination {
     padding: 0;
     left: -15em;
     margin-left: 2.5%;
-    text-align: right; }
-
-  /*blockquote{
-  	h4{
-  		text-align: left;
-  		margin-left: 0;
-  	}
-  }*/
-  /*.post-featured-image{
-  	background-repeat: no-repeat;
-  	margin-top: 0;
-  	position:absolute;
-  	background-size:cover;
-  	background-position: center;
-  	height:100%;
-  	min-height: 100%;
-  	width:19%;
-  	margin:0;
-  	float:left;
-  	.hidden{
-  		visibility: hidden;
-  	}
-  }*/ }
+    text-align: right; } }
 figure img {
   margin-left: 0;
   width: 100%;
