--- a/precompiled/sass-partials/_header.scss
+++ b/precompiled/sass-partials/_header.scss
@@ -3,6 +3,7 @@ header{
 	max-width:50rem;
 	margin: 0 auto 0;
 	background-color: $white;
+	position:relative;
 	a img{
 		margin:1rem 0 1rem 1rem;
 		display: inline-block;
