--- a/precompiled/sass-partials/_home.scss
+++ b/precompiled/sass-partials/_home.scss
@@ -1,7 +1,7 @@
 .site-intro{
 	@extend %clearfix;
 	h1{
-		font-family: $light;
+		font-family: $serif;
 		font-style: italic;
 		text-align: center;
 		font-size: 2.6em;
