--- a/precompiled/sass-partials/_media-queries.scss
+++ b/precompiled/sass-partials/_media-queries.scss
@@ -1,25 +1,13 @@
 @media #{$tablet}{	
-	/*header,h1,h2,h3,h4,h5,h6,p,pre code,ul,ol,.post-meta,.tile-wrapper,aside,figure,#disqus_thread{
-		width: 85%;
-		margin-left: 5%;
-	}*/
 	header h1{
 		font-size: 2rem;
 	}
 }	
 @media #{$desktop}{
-	/*header,h1,h2,h3,h4,h5,h6,p,pre code,ul,ol,.post-meta,.tile-wrapper,figure,#disqus_thread{
-		margin-left: 20%;
-		width:70%;
-	}*/
 	ul ul, ol ol, ul ol, ol ul{
 		margin-left: 2.5rem;
 	}
-	/*pre code{
-		margin-right: 10%;
-		width:70%;
-	}*/
-	main{
+	main,body>header{
 		left: 5em;
 	}
 	aside{
@@ -31,27 +19,6 @@
 		margin-left: 2.5%;
 		text-align: right;
 	}
-	/*blockquote{
-		h4{
-			text-align: left;
-			margin-left: 0;
-		}
-	}*/
-	/*.post-featured-image{
-		background-repeat: no-repeat;
-		margin-top: 0;
-		position:absolute;
-		background-size:cover;
-		background-position: center;
-		height:100%;
-		min-height: 100%;
-		width:19%;
-		margin:0;
-		float:left;
-		.hidden{
-			visibility: hidden;
-		}
-	}*/
 }
 figure img{
 	margin-left:0;
